# camaraX

camera_cdb/: .editorconfig  README  mk.sh  mk_clean.sh  myexport.sh
camera_cdb/common/include/: comm_def.h  comm_error_code.h  comm_func.h  jwhead.h
camera_cdb/common/src/: comm_def.c  comm_func.c
camera_cdb/daemon/: Makefile  daemon.c
camera_cdb/hal/led/include/: lux_hal_led.h
camera_cdb/hal/led/src/: lux_hal_led.c
camera_cdb/hal/misc/include/: lux_hal_gpio.h  lux_hal_lightsns.h  lux_hal_misc.h
camera_cdb/hal/misc/src/: lux_hal_gpio.c  lux_hal_lightsns.c  lux_hal_misc.c  lux_hal_pwm.c
camera_cdb/hal/motor/include/: lux_hal_motor.h  ms419xx.h
camera_cdb/hal/motor/src/: lux_hal_motor.c  ms419xx.c
camera_cdb/hal/reset_key/include/: lux_reset_key.h
camera_cdb/hal/reset_key/src/: lux_reset_key.c
camera_cdb/libs/4.7.2_1.1.6/third/x264/: libx264.so.164
camera_cdb/libs/7.2.0_1.2.0/opencv/: libopencv_core.so.3.3  libopencv_features2d.so.3.3  libopencv_flann.so.3.3  libopencv_highgui.so.3.3  libopencv_imgproc.so.3.3
camera_cdb/libs/7.2.0_1.2.0/third/: libiniparser.so.1
camera_cdb/main/: AppVersion.h  CMakeLists.txt  cmake_config.h  config.h.in  main.c  sample-Encoder-video.c  sample-encode-video.h
camera_cdb/main/jio_demo/inc/: archive.h  avpkt_source.h  avpkt_stream_source.h  demo_main.h  logger.h  playback.h
camera_cdb/main/jio_demo/inc/ffmpeg/libavcodec/: avcodec.h
camera_cdb/main/jio_demo/src/: archive.c  avpkt_source.c_bak  avpkt_stream_source.c_bak  demo_main.c  playback.c
camera_cdb/main/jio_skel/src/: sample_video.c  skel_main.c
camera_cdb/main/lux_client/: Makefile  base.mak  sample_cli  sample_cli.c
camera_cdb/main/lux_server/include/: hi_base.h  hi_errno.h  hi_stdlib.h  hi_types.h  hi_types_base.h  hichannel_host_comm.h  lux_cmd.h  lux_server.h
camera_cdb/main/lux_server/src/: hichannel_host_comm.c  lux_cmd.c  lux_server.c
camera_cdb/main/rtsp_demo/include/: rtp.h
camera_cdb/main/rtsp_demo/src/: rtp.c  rtsp-demo.c  rtsp_main.c
camera_cdb/modules/: main.c
camera_cdb/modules/Users/include/: lux_users.h
camera_cdb/modules/Users/src/: lux_users.c
camera_cdb/modules/config/include/: lux_config.h
camera_cdb/modules/config/src/: lux_config.c
camera_cdb/modules/factory_test/inc/: lux_factory_test.h
camera_cdb/modules/factory_test/src/: lux_factory_test.c
camera_cdb/modules/fdk-aac/include/fdk-aac/: aacenc_lib.h
camera_cdb/modules/jio/include/: idip.h  lux_product_jio.h  lws_config.h
camera_cdb/modules/jio/include/idip/: idip_av_limits.h  idip_av_packet.h  idip_av_source.h  idip_cfg_param.h  idip_cloud_config.h  idip_custom_arg.h  idip_custom_events.h  idip_data_types.h  idip_deque.h  idip_enum.h  idip_iovec.h  idip_log.h  idip_media_buffer.h  idip_net_utils.h  idip_rc.h  idip_seq_finder.h  idip_server.h  (+8 more)
camera_cdb/modules/jio/src/: lux_product_jio.c
camera_cdb/modules/media/include/: bitmapinfo_1080p.h  bitmapinfo_1440p.h  bitmapinfo_360p.h  loiter_detect.hpp  lux_T40_LineCrossDet.hpp  lux_T40_TamperingDet.hpp  lux_audio.h  lux_base.h  lux_daynight.h  lux_event.h  lux_event_object.h  lux_face_det.h  lux_fsrc.h  lux_global.h  lux_iniparse.h  lux_ipc_control.h  lux_isp.h  lux_ivs.h  lux_linecross_det.hpp  lux_loiter_det.hpp  lux_nv2jpeg.h  lux_object_det.hpp  lux_osd.h  lux_perm_det.h  lux_person_det.h  lux_pwm.h  lux_qrcode.h  lux_record.h  lux_summary.h  lux_sys.h  lux_tamper_det.hpp  lux_time.h  lux_video.h  lux_wifi.h  object_detect.hpp
camera_cdb/modules/media/src/: lux_audio.c  lux_base.c  lux_daynight.c  lux_event.c  lux_event_object.c  lux_face_det.c  lux_fsrc.c  lux_global.c  lux_iniparse.c  lux_ipc_control.c  lux_isp.c  lux_ivs.c  lux_linecross_det.cpp  lux_loiter_det.cpp  lux_nv2jpeg.c  lux_object_det.cpp  lux_osd.c  lux_perm_det.c  lux_person_det.c  lux_pwm.c  lux_qrcode.c_bak  lux_record.c  lux_summary.c  lux_sys.c  lux_tamper_det.cpp  lux_time.c  lux_video.c  lux_wifi.c
camera_cdb/modules/onvif/: readme.txt
camera_cdb/modules/onvif/inc/: onvif.h
camera_cdb/modules/onvif/src/: authenticate.c  authenticate.h  func_com.h  func_conf.h  func_network.c  func_network.h  func_osd.c  func_osd.h  func_video.c  func_video.h  onvif.c  onvif_func.c
camera_cdb/modules/onvif/src_soap_new_1/: httpda.c  onvif.h  soapClient.c  soapClientLib.c  soapServer.c  soapServerLib.c  soapStub.h  stdsoap2.h  wsdd.nsmap  wsseapi.c
camera_cdb/modules/onvif/src_soap_new_2/: mecevp.c  redme.txt  soapClient.c  soapClientLib.c  soapServer.c  soapServerLib.c  soapStub.h  stdsoap2.c  wsdd.nsmap
camera_cdb/modules/thrdlibs/: build_ffmpeg.sh
camera_cdb/modules/thrdlibs/ffmpeg/: ffmpeg.sh
camera_cdb/modules/thrdlibs/rtsp/: rtsp.c  rtsp_api.h
camera_cdb/modules/thrdlibs/x264/: x264.sh
camera_cdb/onvif_discovery/: CMakeLists.txt
camera_cdb/onvif_discovery/include/: config.h  func_log.h
camera_cdb/onvif_discovery/src/: func_conf.h  func_log.c  func_network.c  func_network.h  onvif.c  onvif_func.c  soapC.c  soapClient.c  soapH.h  soapServer.c  soapStub.h  stdsoap2.c
camera_cdb/ota/: Makefile  ota.c
camera_cdb/reset_key/: Makefile  reset_key.c
debug/: CMakeCache.txt  Makefile  build.sh  cmake_install.cmake  log.c
doc/: t40_api_list.xlsx
system/T40xp_cam/: mk.sh  mk_key_ubi.sh  mk_ota.sh  mk_system_ubi.sh  rootfs.squashfs  tuya_uuid_key.ini  u-boot-with-spl.bin_nor_16M  uImage  uImage_nor_16M
system/T40xp_cam/key/: device_info.ini
system/T40xp_cam/system/: mymount.sh
system/T40xp_cam/system/config/: luxconfig_bullet.ini  luxconfig_dome.ini
system/T40xp_cam/system/etc/: TXPWR_LMT.txt  mdev.conf  webrtc_profile.ini
system/T40xp_cam/system/gpio/: gpio_init.sh  gpiotool_t40gc
system/T40xp_cam/system/init/: app_init.sh  ip.sh  mac.sh  media_config_bullet.ini  media_config_dome.ini  reset_key.sh  restart.sh  start.sh  start_param  tuya_config.ini
system/T40xp_cam/system/jio/: idip-persistent  jio_config.ini  qr_file  serial_num
system/T40xp_cam/system/lib/: libopencv_imgcodecs.so.3.3  libopencv_video.so.3.3  libopencv_videoio.so.3.3
system/T40xp_cam/system/network/: interfaces_dhcp  interfaces_static
(+432 files in other folders)
